fix body z-index.

--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,11 @@
 @charset "utf-8";
 @import url(../css/html5reset-1.6.1.css); /*reset css*/
 
+/* common */
+.body {
+    position: relative;
+    z-index: -3;
+}
 .inner {
     display: block;
     width: 960px;
